--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "ramda": "0.27.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-crop-picker": "^0.35.1",
     "react-native-keychain": "6.1.1",
     "react-native-localize": "^1.0.0",
     "react-native-safe-area-context": "0.7.3",
